--- a/src/component/MainPage.scss
+++ b/src/component/MainPage.scss
@@ -1,129 +1,173 @@
-.mainpage{
-    width: 100vw;
-    height: 100vh;
-    // border: 2px solid red;
-    box-sizing: border-box;
-    
-    .inner_main_page{
+.mainpage {
+  width: 100vw;
+  height: 100vh;
+  // border: 2px solid red;
+  box-sizing: border-box;
+
+  .inner_main_page {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .left_side {
+      width: 20%;
+      height: 100%;
+      //    border: 2px solid red;
+      padding: 0px 10px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      .section_name {
         width: 100%;
-        height: 100%;
+        height: 10%;
+
         display: flex;
         justify-content: center;
         align-items: center;
-
-
-        .left_side{
-           width: 20%;
-           height: 100%;
-        //    border: 2px solid red;
-           padding: 0px 10px;
-           display: flex;
-           justify-content: center;
-           align-items: center;
-           flex-direction: column;
-           .section_name{
-            width: 100%;
-            height: 10%;
-            
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            gap: 16px;
-            h3{
-                width: 100%;
-                text-align: left;
-            }
-
-            .hr_line{
-                display: inline-block;
-                width: 100%;
-                height: 2px;
-                background-color: black;
-                border-radius: 20px;
-            }
-           }
-
-           .filter{
-            width: 100%;
-            height: 90%;
-            
-            display: flex;
-            justify-content: flex-start;
-            align-items: flex-start;
-            flex-direction: column;
-            gap: 5px;
-              
-            label{
-               cursor: pointer;
-               input{
-                cursor: pointer;
-               }
-            }
-
-           }
+        flex-direction: column;
+        gap: 16px;
+        h3 {
+          width: 100%;
+          text-align: left;
         }
 
-        .right_side{
-            width: 78%;
-           height: 100%;
-        //    border: 2px solid red;
-            border-left: 1px solid black;     
-
-           .list_name{
-            width: 100%;
-            height: 10%;
-            text-align: center;
-           
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            .hr_line{
-                display: inline-block;
-                width: 98%;
-                height: 2px;
-                background-color: black;
-                border-radius: 20px;
-            }
-
-           }
-           .list_of_cases{
-            width: 100%;
-            height: 80%;
-            // border: 2px solid black;
-             padding: 10px;
-            display: grid;
-            grid-template-columns: repeat(2, 1fr); // 2 columns
-            gap: 10px;
-
-           }
-
-           .pagination{
-           height: 10%;
-            padding: 10px;
-            // margin: 15px 0;
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            // border: 2px solid red;
-            gap: 5px;
-
-            span{
-                padding: 15px 20px;
-                border: 1px solid black;
-                cursor: pointer;
-                border-radius: 5px;
-            }
-
-            .black{
-                background-color: grey;
-            }
-
-            .white{
-                background-color: whitesmoke;
-            }
-           }
+        .hr_line {
+          display: inline-block;
+          width: 100%;
+          height: 2px;
+          background-color: black;
+          border-radius: 20px;
         }
+      }
+
+      .filter {
+        width: 100%;
+        height: 90%;
+
+        display: flex;
+        justify-content: flex-start;
+        align-items: flex-start;
+        flex-direction: column;
+        gap: 5px;
+
+        label {
+          cursor: pointer;
+          input {
+            cursor: pointer;
+          }
+        }
+      }
     }
+
+    .right_side {
+      width: 78%;
+      height: 100%;
+      //    border: 2px solid red;
+      border-left: 1px solid black;
+
+      .list_name {
+        width: 100%;
+        height: 7%;
+        text-align: center;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        .hr_line {
+          display: inline-block;
+          width: 98%;
+          height: 2px;
+          background-color: black;
+          border-radius: 20px;
+        }
+      }
+      .list_of_cases {
+        width: 100%;
+        height: 80%;
+        // border: 2px solid black;
+        padding: 10px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        gap: 7px;
+      }
+
+      .pagination {
+        height: 10%;
+        padding: 10px;
+        // margin: 15px 0;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        // border: 2px solid red;
+        gap: 5px;
+
+        span {
+          padding: 15px 20px;
+          border: 1px solid black;
+          cursor: pointer;
+          border-radius: 5px;
+        }
+
+        .black {
+          background-color: grey;
+        }
+
+        .white {
+          background-color: whitesmoke;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .mainpage {
+    .inner_main_page {
+      .left_side {
+        padding: 0 0px;
+      
+     
+
+        .section_name{
+            h3{
+                font-size: 0.9rem;
+            }
+        }
+        .filter{
+            label{
+                font-size: 0.75rem;
+                input{
+                    font-size: 0.6rem;
+                }
+            }
+        }
+      }
+      .right_side {
+        .list_of_cases {
+        }
+
+        .pagination {
+          span {
+            padding: 5px 5px;
+            border: 1px solid black;
+            cursor: pointer;
+            border-radius: 5px;
+          }
+
+          .black {
+            background-color: grey;
+          }
+
+          .white {
+            background-color: whitesmoke;
+          }
+        }
+      }
+    }
+  }
 }
