--- a/src/component/Testcase/TestCase.scss
+++ b/src/component/Testcase/TestCase.scss
@@ -1,16 +1,20 @@
 .testcase{
     // width: 200px;
-    width: 100%;
+    width: calc(50% - 1rem) ;// Adjust width as per number of columns and gap
     height: 100px;
     // border: 2px solid red;
     border-radius: 10px;
-    padding: 10px;
+   
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    // border: 2px solid red;
     .inner_test_case{
-        width: 100%;
-        height: 100%;
+        width: 98%;
+        height: 95%;
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
         flex-direction: column;
         // border: 2px solid red;
@@ -20,27 +24,21 @@
           white-space: nowrap; 
           overflow: hidden; 
           text-overflow: ellipsis; 
-        }
-
-        .desc{
-            width: 100%;
-            height: 40%;
-            white-space: nowrap; 
-            overflow: hidden; 
-            text-overflow: ellipsis; 
+       
         }
 
         .type{
             width: 100%;
-            height: 30%;
+            height: 40%;
             // border: 2px solid red;
             display: flex;
             justify-content: flex-end;
             align-items: center;
             p{
-             padding: 5px;
+               
+            padding: 3px 5px;
             //  border: 1px solid red;
-             border-radius: 10px;
+             border-radius: 5px;
              background-color: rgb(93, 175, 246);
              color: white;
              box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
@@ -50,5 +48,17 @@
         
 
 
+    }
+}
+
+@media screen and (max-width:600px) {
+    .testcase{
+         width: calc(50% - 1rem) ;
+        height: 100px;
+
+         .inner_test_case{
+
+            
+         }
     }
 }
