--- a/src/component/MainPage.scss
+++ b/src/component/MainPage.scss
@@ -3,6 +3,7 @@
   height: 100vh;
   // border: 2px solid red;
   box-sizing: border-box;
+  background-color: #F9F9F9;
 
   .inner_main_page {
     width: 100%;
@@ -15,6 +16,7 @@
       width: 20%;
       height: 100%;
       //    border: 2px solid red;
+      
       padding: 0px 10px;
       display: flex;
       justify-content: center;
@@ -123,37 +125,42 @@
       }
     }
   }
+  
 }
+
+.filter_icon{
+    position: fixed;
+    left: 20px;
+    top: 18px;
+    display: none;
+    cursor: pointer;
+    // border: 2px solid red;
+}
+
+
 
 @media screen and (max-width: 600px) {
   .mainpage {
     .inner_main_page {
       .left_side {
         padding: 0 0px;
-      
-     
+        display: none;
+       
+        
 
-        .section_name{
-            h3{
-                font-size: 0.9rem;
-            }
-        }
-        .filter{
-            label{
-                font-size: 0.75rem;
-                input{
-                    font-size: 0.6rem;
-                }
-            }
-        }
+       
       }
       .right_side {
+        width: 100%;
         .list_of_cases {
         }
 
         .pagination {
+            height: 8%;
+           
           span {
             padding: 5px 5px;
+            height: fit-content;
             border: 1px solid black;
             cursor: pointer;
             border-radius: 5px;
@@ -169,5 +176,188 @@
         }
       }
     }
+
+    
+   
+    
   }
+
+  .left_side_open{
+    // border: 2px solid red;
+    border: 1px solid grey;
+   position: fixed;
+   z-index: 5;
+   background-color: whitesmoke;
+   left: 0px;
+   top: 47px;
+   width: 200px;
+   height: 100vh;
+   padding: 20px;
+   .section_name {
+    width: 100%;
+    height: 10%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 16px;
+    h3 {
+      width: 100%;
+      text-align: left;
+    }
+
+    .hr_line {
+      display: inline-block;
+      width: 100%;
+      height: 2px;
+      background-color: black;
+      border-radius: 20px;
+    }
+  }
+
+  .filter {
+    width: 100%;
+    height: 90%;
+
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+    gap: 5px;
+
+    label {
+      cursor: pointer;
+      input {
+        cursor: pointer;
+      }
+    }
+  }
+
+
+   
 }
+
+.left_side_close{
+   display: none;
+}
+
+.filter_icon{
+    position: fixed;
+    left: 20px;
+    top: 18px;
+    display: block;
+    // border: 2px solid red;
+}
+}
+
+
+@media screen and (min-width: 600px) and (max-width:1000px) {
+    .mainpage {
+      .inner_main_page {
+        .left_side {
+          padding: 0 0px;
+          display: none;
+         
+          
+  
+         
+        }
+        .right_side {
+          width: 100%;
+          .list_of_cases {
+          }
+  
+          .pagination {
+              height: 8%;
+            span {
+              padding: 5px 5px;
+              border: 1px solid black;
+              cursor: pointer;
+              border-radius: 5px;
+            }
+  
+            .black {
+              background-color: grey;
+            }
+  
+            .white {
+              background-color: whitesmoke;
+            }
+          }
+        }
+      }
+  
+      
+     
+      
+    }
+  
+    .left_side_open{
+      // border: 2px solid red;
+      border: 1px solid grey;
+     position: fixed;
+     z-index: 5;
+     background-color: whitesmoke;
+     left: 0px;
+     top: 47px;
+     width: 200px;
+     height: 100vh;
+     padding: 20px;
+     .section_name {
+      width: 100%;
+      height: 10%;
+  
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      gap: 16px;
+      h3 {
+        width: 100%;
+        text-align: left;
+      }
+  
+      .hr_line {
+        display: inline-block;
+        width: 100%;
+        height: 2px;
+        background-color: black;
+        border-radius: 20px;
+      }
+    }
+  
+    .filter {
+      width: 100%;
+      height: 90%;
+  
+      display: flex;
+      justify-content: flex-start;
+      align-items: flex-start;
+      flex-direction: column;
+      gap: 5px;
+  
+      label {
+        cursor: pointer;
+        input {
+          cursor: pointer;
+        }
+      }
+    }
+  
+  
+     
+  }
+  
+  .left_side_close{
+     display: none;
+  }
+  
+  .filter_icon{
+      position: fixed;
+      left: 20px;
+      top: 18px;
+      display: block;
+      // border: 2px solid red;
+  }
+  }
