--- a/src/component/Testcase/TestCase.scss
+++ b/src/component/Testcase/TestCase.scss
@@ -1,15 +1,16 @@
 .testcase{
-    // width: 200px;
-    width: calc(50% - 1rem) ;// Adjust width as per number of columns and gap
+    
+    width: calc(50% - 1rem) ;
     height: 100px;
-    // border: 2px solid red;
+   
     border-radius: 10px;
+    background-color: white;
    
     box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
     display: flex;
     justify-content: center;
     align-items: center;
-    // border: 2px solid red;
+   
     .inner_test_case{
         width: 98%;
         height: 95%;
@@ -17,7 +18,6 @@
         justify-content: space-between;
         align-items: center;
         flex-direction: column;
-        // border: 2px solid red;
         .name{
           width: 100%;
           height: 30%;
